--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ env:
     - PYTEST_ARGS="--cov glue"
     - NUMPY_VER=1.9
     - IPYTHON_VER=2
+    - PYSIDE_VER=1.1.2
     - CONDA_BASE="pip numpy=$NUMPY_VER scipy cython h5py pygments pyzmq scikit-image pandas sphinx=1.2.3 xlrd pillow pytest mock coverage pyyaml requests sphinx_rtd_theme"
     - PIP_BASE="pytest-cov coveralls pyavm astrodendro awscli"
     - secure: NvQVc3XmmjXNVKrmaD31IgltsOImlnt3frAl4wU0pM223iejr7V57hz/V5Isx6sTANWEiRBMG27v2T8e5IiB7DQTxFUleZk3DWXQV1grw/GarEGUawXAgwDWpF0AE/7BRVJYqo2Elgaqf28+Jkun8ewvfPCiEROD2jWEpnZj+IQ=
@@ -64,7 +65,7 @@ matrix:
         # Test with older package versions:
 
         - os: linux
-          env: PYTHON_VERSION=2.7 MPL_VER=1.3 ASTRO_VER=0.3 NUMPY_VER=1.8
+          env: PYTHON_VERSION=2.7 MPL_VER=1.3 ASTRO_VER=0.3 NUMPY_VER=1.8 PYSIDE_VER=1.1.1
 
         - os: linux
           env: PYTHON_VERSION=2.7 MPL_VER=1.4 ASTRO_VER=0.4 IPYTHON_VER=1.1
@@ -96,7 +97,7 @@ install:
   - conda create --yes -n test python=$PYTHON_VERSION
   - source activate test
   - conda install $CONDA_ARGS $CONDA_BASE
-  - if [[ $PYTHON_VERSION == 2* ]]; then conda install $CONDA_ARGS python=$PYTHON_VERSION pyside; fi
+  - if [[ $PYTHON_VERSION == 2* ]]; then conda install $CONDA_ARGS python=$PYTHON_VERSION pyside=$PYSIDE_VER; fi
   - if [[ $PYTHON_VERSION == 3* ]]; then conda install $CONDA_ARGS python=$PYTHON_VERSION pyqt; fi
 
   - LC_ALL=C pip install $PIP_ARGS $PIP_BASE
