Make sure the locale is set to C.UTF-8

--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -1,7 +1,8 @@
 conda:
-    python: 3
     file: .environment.yml
     
 python:
-    version: 3
     setup_py_install: true
+
+formats:
+    - none
